--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   display: flex;
   justify-content: center;
   padding: 1rem;
@@ -17,7 +17,7 @@
   transform: scale(1.1);
   transition: transform 0.3s ease;
 } */
-
+/* 
 @media (max-width: 768px) {
   .footer {
     flex-direction: column;
@@ -27,4 +27,4 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
   }
-}
+} */ 
