--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,7 +20,7 @@
   transition: box-shadow 0.3s ease-in-out;
 } */
 
-.navigation a {
+/* .navigation a {
   color: #333333;
   text-decoration: none;
   margin-left: 20px;
@@ -56,4 +56,4 @@
     padding: 5px;
     margin: 0 10px; 
   }
-}
+}  */
